--- a/.github/workflows/Immortalwrt-release.yml
+++ b/.github/workflows/Immortalwrt-release.yml
@@ -1,6 +1,9 @@
 name: Immortalwrt release
 
 on:
+  repository_dispatch:
+  workflow_dispatch:
+  
   # push:
   #     branches:
   #       - master
