--- a/.github/workflows/Immortalwrt-release.yml
+++ b/.github/workflows/Immortalwrt-release.yml
@@ -73,12 +73,19 @@ jobs:
           cd openwrt
           cp -f ../SCRIPTS/prepare_package.sh ./prepare_package.sh
           /bin/bash prepare_package.sh
+
+      - name: Copy FILES
+        run: |
+          cd openwrt
+          cp -rf ../PATCH/R2S/files ./files
+
       - name: Make Config
         run: |
           cd openwrt
           mv ../SEED/config-release.seed .config
           sed -i '/CONFIG_TARGET_ROOTFS_SQUASHFS/d' .config
           make defconfig
+
       - name: Make Download
         run: |
           df -h
