--- a/.github/workflows/Immortalwrt super.yml
+++ b/.github/workflows/Immortalwrt super.yml
@@ -82,7 +82,7 @@ jobs:
       - name: Make Config
         run: |
           cd openwrt
-          mv ../SEED/config-release.seed .config
+          mv ../SEED/config-super.seed .config
           sed -i '/CONFIG_TARGET_ROOTFS_SQUASHFS/d' .config
           make defconfig
 
