--- a/.github/workflows/Immortalwrt cuiwen-home.yml
+++ b/.github/workflows/Immortalwrt cuiwen-home.yml
@@ -1,4 +1,4 @@
-name: Immortalwrt super
+name: Immortalwrt cuiwen-home
 
 on:
   repository_dispatch:
@@ -124,11 +124,11 @@ jobs:
           gzip -d *.gz && exit 0
           gzip *.img
           releaseTag=${{ env.latest_release }}
-          sha256sum *.gz | tee R2S-R4S-OPoA-$releaseTag-$(date +%Y-%m-%d).sha256sum
-          mv *r2s*ext4* ./R2S-OPoA-$releaseTag-$(date +%Y-%m-%d)-ext4.img.gz
-          mv *r4s*ext4* ./R4S-OPoA-$releaseTag-$(date +%Y-%m-%d)-ext4.img.gz
-          mv *r2s*squashfs* ./R2S-OPoA-$releaseTag-$(date +%Y-%m-%d)-sfs.img.gz
-          mv *r4s*squashfs* ./R4S-OPoA-$releaseTag-$(date +%Y-%m-%d)-sfs.img.gz
+          sha256sum *.gz | tee R2S-R4S-cuiwen-home-$releaseTag-$(date +%Y-%m-%d).sha256sum
+          mv *r2s*ext4* ./R2S-cuiwen-home-$releaseTag-$(date +%Y-%m-%d)-ext4.img.gz
+          mv *r4s*ext4* ./R4S-cuiwen-home-$releaseTag-$(date +%Y-%m-%d)-ext4.img.gz
+          mv *r2s*squashfs* ./R2S-cuiwen-home-$releaseTag-$(date +%Y-%m-%d)-sfs.img.gz
+          mv *r4s*squashfs* ./R4S-cuiwen-home-$releaseTag-$(date +%Y-%m-%d)-sfs.img.gz
           cd ../openwrt
           cp .config ../artifact/config-full.seed
           ./scripts/diffconfig.sh > ../artifact/config-diff.seed
