--- a/.github/workflows/Immortalwrt super-work.yml
+++ b/.github/workflows/Immortalwrt super-work.yml
@@ -132,7 +132,7 @@ jobs:
           cd ../openwrt
           cp .config ../artifact/config-full.seed
           ./scripts/diffconfig.sh > ../artifact/config-diff.seed
-          release_tag="R2S-R4S-OPoA-$releaseTag-$(date +%Y-%m-%d)"
+          release_tag="R2S-R4S-super-work-$releaseTag-$(date +%Y-%m-%d)"
           echo "release_tag=${release_tag}" >>$GITHUB_ENV
       - name: Upload Artifact
         uses: actions/upload-artifact@main
