--- a/.github/workflows/Immortalwrt super-home.yml
+++ b/.github/workflows/Immortalwrt super-home.yml
@@ -59,6 +59,19 @@ jobs:
           sudo -E apt-get -qq clean
           sudo -E git config --global user.name 'GitHub Actions' && git config --global user.email 'noreply@github.com'
           df -h
+          
+      - name: Replace luci URL in feeds.conf.default  # 添加这部分
+        run: |
+          OLD_URL="src-git luci https://github.com/immortalwrt/luci.git"
+          NEW_URL="src-git luci https://github.com/super27035/R2S-R4S-Immortalwrt-luci.git"
+
+          if grep -q "$OLD_URL" "feeds.conf.default"; then
+              sed -i "s|$OLD_URL|$NEW_URL|" "feeds.conf.default"
+              echo "已将 $OLD_URL 替换为 $NEW_URL"
+          else
+              echo "未找到要替换的行：$OLD_URL"
+          fi
+          
       - name: Checkout
         uses: actions/checkout@main
       - name: Prepare Sources
