--- a/.github/workflows/Immortalwrt cuiwen-home.yml
+++ b/.github/workflows/Immortalwrt cuiwen-home.yml
@@ -10,7 +10,7 @@ on:
   #     paths:
   #       - 'SWITCH'
   schedule:
-    - cron: '0 3 5 * *'
+    - cron: '0 3 1 * *'
   watch:
     types: [started]
 
@@ -89,7 +89,7 @@ jobs:
       - name: Make Config
         run: |
           cd openwrt
-          mv ../SEED/config-super.seed .config
+          mv ../SEED/config-cuiwen.seed .config
           sed -i '/CONFIG_TARGET_ROOTFS_SQUASHFS/d' .config
           make defconfig
 
