--- a/.github/workflows/Immortalwrt-snapshot.yml
+++ b/.github/workflows/Immortalwrt-snapshot.yml
@@ -6,7 +6,7 @@ on:
   #       - master
   #     paths:
   #       - 'SWITCH'
-  schedule:
+  # schedule:
     - cron: '0 0 * * 0'
   watch:
     types: [started]
