--- a/.github/workflows/Clean.yml
+++ b/.github/workflows/Clean.yml
@@ -1,16 +1,12 @@
 name: Cleaning
 
-#on:
-  schedule:
-    - cron: '1 8 * * 1'
-  # watch:
-  #   types: started
+on:
+  workflow_dispatch:  # 手动触发
 
 jobs:
 
   Cleanup-Old-Releases:
     runs-on: ubuntu-22.04
-    if: github.repository_owner_id == github.event.sender.id || github.event_name == 'schedule'
     steps:
     - name: Delete Older Releases
       uses: dev-drprasad/delete-older-releases@master
@@ -22,7 +18,6 @@ jobs:
 
   Cleanup-Old-Artifacts:
     runs-on: ubuntu-22.04
-    if: github.repository_owner_id == github.event.sender.id || github.event_name == 'schedule'
     steps:
     - name: Cleanup Old Action Artifacts
       uses: heidi-pay/gha-delete-artifacts@main
@@ -35,7 +30,6 @@ jobs:
 
   Cleanup-Workflow-Logs:
     runs-on: ubuntu-22.04
-    if: github.repository_owner_id == github.event.sender.id || github.event_name == 'schedule'
     steps:
       - name: Delete workflow runs
         uses: Mattraks/delete-workflow-runs@main
