--- a/.github/workflows/Immortalwrt-snapshot.yml
+++ b/.github/workflows/Immortalwrt-snapshot.yml
@@ -1,22 +1,12 @@
 name: Immortalwrt snapshot
 
 on:
-  # push:
-  #     branches:
-  #       - master
-  #     paths:
-  #       - 'SWITCH'
-  schedule:
-    - cron: '0 0 * * 0'
-  watch:
-    types: [started]
+  workflow_dispatch:  # 手动触发
 
 jobs:
 
   build:
-
     runs-on: ubuntu-22.04
-    if: github.repository_owner_id == github.event.sender.id || github.event_name == 'schedule'
 
     steps:
       - name: Show system
@@ -30,7 +20,6 @@ jobs:
           else
             echo "CPU不为8370C或7763，性能不足，停止执行命令"
             exit 1
-          fi
       - name: Maximize build space
         uses: easimon/maximize-build-space@master
         with:
